Added full documentation regarding modules